# backend/docs/openapi.yaml
@@ -203,16 +203,19 @@ components:
           format: uri
           readOnly: true
           type: string
-        limit:
-          format: int64
-          type: integer
         messages:
           items:
             $ref: "#/components/schemas/MessageDTO"
           type:
             - array
             - "null"
-        offset:
+        page:
+          format: int64
+          type: integer
+        pageCount:
+          format: int64
+          type: integer
+        pageSize:
           format: int64
           type: integer
         total:
@@ -221,8 +224,9 @@ components:
       required:
         - messages
         - total
-        - limit
-        - offset
+        - page
+        - pageSize
+        - pageCount
       type: object
     GetMessagesResponseBody:
       additionalProperties: false
@@ -430,13 +434,13 @@ paths:
             type: string
         - explode: false
           in: query
-          name: limit
+          name: page
           schema:
             format: int64
             type: integer
         - explode: false
           in: query
-          name: offset
+          name: pageSize
           schema:
             format: int64
             type: integer
